# RAG-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.sourcecraft/: ci.yaml
alembic/: env.py
alembic/versions/: 2026_02_07_2259-8f51d836548c_change_filename_column_type.py  2026_02_07_2300-43154a330299_change_filename_column_again_due_to_.py  2026_02_08_1151-3c37b00bd52e_add_size_of_file_column.py  2026_02_08_1441-e87bec764bd0_change_id_type_due_to_qdrant_connection.py  2026_02_10_2317-2fdd5778ec5a_create_question_chunk_table_for_hype_.py  2026_02_13_2238-954ad4fd8edf_удалил_таблицу_question_chunk.py  39511d592e0f_create_file_table.py
rag_bot/: main.py
rag_bot/app/: handlers.py
rag_bot/backend/: server.py
rag_bot/backend/api_v1/: server.py
rag_bot/backend/api_v1/schemas/: schemas.py
rag_bot/backend/api_v1/sql_queries/: queries.py
rag_bot/backend/db/: engine.py
rag_bot/backend/db/models/: __init__.py  db_helper.py  files.py
rag_bot/backend/embeddings/: embed_pipe.py
rag_bot/backend/llm/: llm.py
rag_bot/backend/logger/: logger_config.py
rag_bot/backend/vector_db/: chroma.py  qdrant.py
rag_bot/bot/: main.py
rag_bot/bot/logic/: handlers.py  keyboards.py
