[tool.poetry]
name = "rag-bot"
version = "0.1.0"
description = ""
authors = ["Mikhail Zuev <mikhailneue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiogram = "^3.24.0"
python-dotenv = "^1.2.1"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pgvector = "^0.4.2"
pinecone = "^8.0.0"
httpx = "^0.28.1"
chromadb = "^1.4.1"
pypdf = "^6.6.2"
langchain = "^1.2.8"
langchain-community = "^0.4.1"
sentence-transformers = "^5.2.2"
python-multipart = "^0.0.22"
qdrant-client = "^1.16.2"
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"
alembic = "^1.18.3"
pydantic-settings = "^2.12.0"
black = "^26.1.0"
langchain-experimental = "^0.4.1"
accelerate = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "rag_bot.bot.main:run"
